--- a/src/HornedBeast.css
+++ b/src/HornedBeast.css
@@ -17,3 +17,30 @@
     margin-bottom: .5vw;
 }
 
+.imgContainer {
+    position: relative;
+    border: 1vh solid wheat;
+    border-radius: 1%;
+}
+
+.imgContainer img {
+    /* display: inline-block; */
+    
+}
+
+.heart {
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    background-color: rgba(255, 255, 255, 0.3);
+    border-radius: 0 10% 25%;
+
+    /* blurry background color https://stackoverflow.com/a/58083568 */
+    backdrop-filter: blur(6px);
+}
+.imgContainer:hover {
+    cursor: pointer;
+    border-color: aqua;
+}
