added bootstrap to package

--- a/src/HornedBeast.css
+++ b/src/HornedBeast.css
@@ -21,6 +21,7 @@
     position: relative;
     border: 1vh solid wheat;
     border-radius: 1%;
+    display: inline-block;
 }
 
 .imgContainer img {
