--- a/src/HornedBeast.css
+++ b/src/HornedBeast.css
@@ -7,17 +7,20 @@
 }
 
 .hornedBeast .card-title {
-    font-size: 2vw;
+    font-size: 1.5rem;
+    border-bottom: 2px solid lightslategray;
+    text-align: center;
+
 }
 
 .hornedBeast .card-text {
     font-size: 1rem;
     margin: auto;
     display: inline-block;
-    margin-bottom: .5vw;
+    margin-bottom: .5rem;
 }
 
-.hornedBeast .card-img {
+.hornedBeast img {
     position: relative;
     border: 1vh solid wheat;
     border-radius: 1%;
@@ -27,8 +30,8 @@
 .heart {
     display: inline-block;
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 2%;
+    left: 3%;
 
     background-color: rgba(255, 255, 255, 0.3);
     border-radius: 0 10% 25%;
@@ -37,7 +40,7 @@
     backdrop-filter: blur(6px);
 }
 
-.hornedBeast .card-img:hover {
+.hornedBeast img:hover {
     cursor: pointer;
     border-color: aqua;
 }
