--- a/src/Main.css
+++ b/src/Main.css
@@ -2,10 +2,12 @@
     box-sizing: border-box;
 }
 
-/* main {
-    display: flex;
+main {
+    /* display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-} */
+    justify-content: space-around; */
+
+    background-color: antiquewhite;
+}
 
 /* use media queries */
