added notes to self for the morning when I need to finish

--- a/src/HornedBeast.css
+++ b/src/HornedBeast.css
@@ -22,7 +22,7 @@
 
 .hornedBeast img {
     position: relative;
-    border: 1vh solid wheat;
+    border: 5px solid wheat;
     border-radius: 1%;
     display: inline-block;
 }
